[package]
name = "simple_encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Workspace, contém outras crates locais que serão utilizadas como dependência
[workspace]
members = ["lib/aes-simple", "lib/rsa-simple"]

# Dependências externas. Podem ser encontradas em crates.io
[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0" }
aes_simple = { path = "lib/aes-simple" }
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
once_cell = "1.18.0"
mime = "0.3.17"
rsa_simple = { path = "lib/rsa-simple" }
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls"] }
tera = "1.19.1"
